--- a/wiki/Openstreetmap.wiki
+++ b/wiki/Openstreetmap.wiki
@@ -3,12 +3,20 @@
 
 = Introduction =
 
-This page describes how to use SAX XML parser with [http://www.openstreetmap.org] OpenStreetMap _.osm_ xml-based format in _eclipse IDE_
+This page describes how to use SAX XML parser with [http://www.openstreetmap.org] OpenStreetMap _.osm_ xml-based format in _eclipse IDE_.
 
 
 = Details =
 
-*SAX xml parsing*
+==insert _.osm_ file into package structure==
+
+Copy generic file _.osm_ (e.g., _maps.osm_) in project folder _res/raw_.
+See [Android tutorial http://http://code.google.com/android/intro/hello-android.html] to understand such a structure
+Automagically the file is 
+
+==reading _.osm_ file== 
+
+==SAX xml parsing==
 
 package: com.android.OsmNavigator
 java file: OsmFileReader.java
