Edited wiki page through web user interface.

--- a/wiki/Openstreetmap.wiki
+++ b/wiki/Openstreetmap.wiki
@@ -11,8 +11,11 @@ This page describes how to use SAX XML parser with [http://www.openstreetmap.org
 ==insert _.osm_ file into package structure==
 
 Copy generic file _.osm_ (e.g., _maps.osm_) in project folder _res/raw_.
-See [Android tutorial http://http://code.google.com/android/intro/hello-android.html] to understand such a structure
-Automagically the file is 
+
+See Android tutorial [http://http://code.google.com/android/intro/hello-android.html] to understand such a structure.
+
+Automagically (or press F5) the *file id Resource* (an integer) referring to the xml file
+appears.
 
 ==reading _.osm_ file== 
 
