Edited wiki page through web user interface.

--- a/wiki/Openstreetmap.wiki
+++ b/wiki/Openstreetmap.wiki
@@ -8,8 +8,8 @@ This page describes how to use SAX XML parser with [http://www.openstreetmap.org
 
 = Details =
 
-----
-==insert _.osm_ file into package structure==
+
+==insert _.osm_ file into package structure==----
 
 Copy generic file _.osm_ (e.g., _maps.osm_) in project folder _res/raw_.
 
