Edited wiki page through web user interface.

--- a/wiki/OsmHandler.wiki
+++ b/wiki/OsmHandler.wiki
@@ -53,7 +53,14 @@ Synopsis of our OsmHandler class
           */
           }
       }
-
+      
+      public void endElement(String uri, String name, String qName){{
+          if(qName.equals("way")){
+          /*
+          
+          */
+          }
+      }   
 
 
   }
