--- a/wiki/OsmHandler.wiki
+++ b/wiki/OsmHandler.wiki
@@ -119,8 +119,10 @@ So we have a long list of each osm node _<node>_ with the couple attribute _lat_
     	}
         
 }}}
-  * Now we would like to store information about _<way>_ tag. But _<way>_ is not like _<node>_, it has got child nodes like _<nd>_ and _<tag>_. Thus, in each Way instance, we would appreciate to find relates <nd> and <tag>. note that we are writing *startElement()* method again. 
+  * Now we would like to store information about _<way>_ tag. But _<way>_ is not like _<node>_, it has got child nodes like _<nd>_ and _<tag>_. Thus, in each Way instance, we would appreciate to find relates _<nd>_ and _<tag>_. note that we are writing *startElement()* method again. 
 {{{
+    Way way; /* create way instance outside methods. The same var way is created eash time parser finds new <way> node*/
+
     public void startElement( ... ){
         /*
         ...
@@ -139,6 +141,10 @@ So we have a long list of each osm node _<node>_ with the couple attribute _lat_
     		tag.k = atts.getValue("k");
     		tag.v = atts.getValue("v");
     		if(way!=null)way.addTag(tag);
+                /*
+                utilizziamo il metodo Way.addTag() per aggiungere un'instanza 
+                tag
+                */
     		return;
     	}
     } // finally, we close startElement()
