Edited wiki page through web user interface.

--- a/wiki/STRUCTURE.wiki
+++ b/wiki/STRUCTURE.wiki
@@ -1,7 +1,7 @@
 #summary Main topics and introduction to our work
 #labels Featured
 
-== Structure ==
+== Package ==
 ----
 Main activity, as you can see in ECLIPSE, is defined in class OsmReader.java
 
