Edited wiki page through web user interface.

--- a/wiki/WaySelect.wiki
+++ b/wiki/WaySelect.wiki
@@ -9,13 +9,32 @@ The user interface presents:
 == Activity reponse ==
 ----
 Pressing OK or BACK button makes this activity finish. The _on click handlers_ methods are these
+  # *confirmListener*  listens OK click
+  # *backListener* listens BACK click
+Each method must ovverride an _onClick(View v)_ method
 {{{
   private View.OnClickListener confirmListener = new View.OnClickListener(){
     public void onClick(View v) {
-    /*...*/
+    /*... OK Pressed */
+       Bundle bundle = new Bundle(); // piece of information key-value string
+            
+       bundle.putString("tag", searchEditText.getText().toString());
+       bundle.putString("lat","345667");
+        	
+       
+        	Intent mIntent = new Intent();
+        	mIntent.putExtras(bundle);
+        	setResult(RESULT_OK, mIntent);
+        	
+            finish();
     }
   }
 
 }}}
-
-
+Then, if the user press OK, an Intent instance with some information is set, and the *setResult(OK, Intent)* allows this activity to send back data to main activity, OsmReader. 
+Otherwise, simply calling *finish()* causes the activity end:
+{{{
+            setResult(RESULT_CANCELED);
+        	
+            finish();
+}}}
