Edited wiki page through web user interface.

--- a/wiki/GPS.wiki
+++ b/wiki/GPS.wiki
@@ -19,7 +19,36 @@ D:\android\tools>ddms
   # setting up *permissions*
     *  add the _ACCESS_FINE_LOCATION_ permission to the _AndroidManifest.xml_ file, like [http://www.devx.com/wireless/Article/39239/1954?pf=true here], before any _<application>_
     {{{
-       <uses-permission 
-        android:name="android.permission.ACCESS_FINE_LOCATION" />
+<uses-permission 
+   android:name="android.permission.ACCESS_FINE_LOCATION" />
     }}}
-    *  hello
+  # code the activity to use _LocationManager_
+    * obtain the LOCATION_SERVICE service and init it. Note that the method LocationManager.requestLocationUpdates(..) require a Listener. We'll code it next step.
+    {{{
+    /* obtain the SERVICE */
+    private LocationManager getLocationManager() {
+        return (LocationManager)getSystemService(Context.LOCATION_SERVICE);
+    }
+
+    /* init the SERVICE */
+
+    private void initLocation() {
+
+	LocationManager lm = getLocationManager();
+
+	try{
+
+        	lm.requestLocationUpdates("gps",0,0,mLocationListener);
+	
+        } catch(Exception e){  
+           /*... 
+             Handle an exception, usually a SecurityException, see PERMISSION above
+           */
+        }
+    }  
+    }}}
+    * setting up the _Listener_
+
+
+
+
