Edited wiki page through web user interface.

--- a/wiki/GPS.wiki
+++ b/wiki/GPS.wiki
@@ -12,17 +12,23 @@ Here a *to-do-list*
 {{{
 D:\android\tools>ddms
 }}}
-  # setting up a *MOCK GPS TRACKER*
-    * download a _.klm_ file (gps tracking), one is at [http://groups.google.com/group/android-developers/files this link, geo_sample_data.zip
+
+  == setting up a *MOCK GPS TRACKER* ==
+  ----
+    * download a _.klm_ file (gps tracking), one is at [http://groups.google.com/group/android-developers/files this link, geo_sample_data.zip]
     * In _Dalvik Debug monitor_ go to _emulator control_; then in this tab click on _Location Controls_ -> klm -> Load Klm an browse to your klm file
     * When you need GPS, click on play button located at the bottom of this window
-  # setting up *permissions*
+  == ==
+  == setting up *permissions* ==
+  ----
     *  add the _ACCESS_FINE_LOCATION_ permission to the _AndroidManifest.xml_ file, like [http://www.devx.com/wireless/Article/39239/1954?pf=true here], before any _<application>_
     {{{
 <uses-permission 
    android:name="android.permission.ACCESS_FINE_LOCATION" />
     }}}
-  # code the activity to use _LocationManager_ 
+  == ==
+  == code the activity to use _LocationManager_ ==
+  ---- 
     * obtain the LOCATION_SERVICE service and init it. Note that the method LocationManager.requestLocationUpdates(..) require a Listener. We'll code it next step.
     {{{
     /* obtain the SERVICE */
@@ -48,5 +54,3 @@ D:\android\tools>ddms
     }  
     }}}
     * setting up the _Listener_
-
-
